--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@
 }
 
 body{
+
     scroll-behavior: smooth;
 }
 
@@ -18,6 +19,7 @@ a{
 .container{
     min-height: 100vh;
     padding: 6px 9px 0px 9px;
+
 }
 .container header{
     display: flex;
@@ -133,4 +135,23 @@ img{
     display: none;
     justify-content: center;
     align-items: center;
+}
+
+.stopbtn{
+    position: fixed;
+    margin-top:20px ;
+    bottom: 5px;
+    left: 10px;
+    z-index: 999;
+}
+
+.stop{
+    padding: 10px;
+    cursor: pointer;
+    transition-duration:1s ;
+
+}
+
+.stop:hover{
+    background-color: aqua;
 }
